--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -164,5 +163,11 @@
 
   .fade-in-exit-active {
     @apply opacity-0 transition-opacity duration-300;
+  }
+}
+
+@layer utilities {
+  .mobile-nav-height {
+    height: calc(100vh - 72px);
   }
 }
